--- a/app/views/feedbacks/index.html.erb
+++ b/app/views/feedbacks/index.html.erb
@@ -28,9 +28,12 @@
     font-weight: 500;
     margin-bottom: 18px;
   }
+  .table-wrapper {
+    width: 100%;
+    overflow-x: auto;
+  }
 
-
-   table {
+  table {
     border-collapse: collapse;
     width: 100%;
   }
@@ -98,48 +101,50 @@
     <h1>Liste des feedbacks</h1>
   </section>
   <section class="grid-1">
-    <table>
-      <thead>
-        <tr>
-          <th>Utilisateur</th>
-          <th>Comment évalueriez-vous votre expérience globale sur notre site ?</th>
-          <th>Comment évalueriez-vous la facilité pour rechercher une information sur le site ?</th>
-          <th>comment évalueriez-vous la qualité et la pertinence du contenu proposé sur le site ?</th>
-          <th>Comment évalueriez-vous l’efficacité du quiz ?</th>
-          <th>Comment évalueriez-vous l’utilité des listes ?</th>
-          <th>Comment évalueriez-vous la réactivité et l’efficacité de notre support client ? (Répondre seulement si vous avez déjà utilisé le support)</th>
-          <th>Comment évalueriez-vous la vitesse et la performance générale du site ?</th>
-          <th>Quels sont, selon vous, les points forts de notre site ?</th>
-          <th>Quels sont les aspects que vous aimeriez voir améliorés ?</th>
-          <th>Avez-vous des suggestions pour améliorer l'expérience utilisateur ?</th>
-          <th>Y a-t-il des fonctionnalités que vous aimeriez voir ajoutées ou supprimées ?</th>
-          <th>Avez-vous des commentaires généraux ou des remarques supplémentaires que vous souhaiteriez partager ?</th>
-          <th>Supprimer</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @feedbacks.each do |feedback| %>
+    <div class="table-wrapper">
+      <table>
+        <thead>
           <tr>
-            <td><%= feedback.user.email %></td>
-            <td><%= feedback.question_1 %></td>
-            <td><%= feedback.question_2 %></td>
-            <td><%= feedback.question_3 %></td>
-            <td><%= feedback.question_4 %></td>
-            <td><%= feedback.question_5 %></td>
-            <td><%= feedback.question_6 %></td>
-            <td><%= feedback.question_7 %></td>
-            <td><%= feedback.question_8 %></td>
-            <td><%= feedback.question_9 %></td>
-            <td><%= feedback.question_10 %></td>
-            <td><%= feedback.question_11 %></td>
-            <td><%= feedback.question_12 %></td>
-            <td>
-              <%= link_to 'Supprimer', feedback_path(feedback), method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer ce feedback?' } %>
-            </td>
+            <th>Utilisateur</th>
+            <th>Comment évalueriez-vous votre expérience globale sur notre site ?</th>
+            <th>Comment évalueriez-vous la facilité pour rechercher une information sur le site ?</th>
+            <th>comment évalueriez-vous la qualité et la pertinence du contenu proposé sur le site ?</th>
+            <th>Comment évalueriez-vous l’efficacité du quiz ?</th>
+            <th>Comment évalueriez-vous l’utilité des listes ?</th>
+            <th>Comment évalueriez-vous la réactivité et l’efficacité de notre support client ? (Répondre seulement si vous avez déjà utilisé le support)</th>
+            <th>Comment évalueriez-vous la vitesse et la performance générale du site ?</th>
+            <th>Quels sont, selon vous, les points forts de notre site ?</th>
+            <th>Quels sont les aspects que vous aimeriez voir améliorés ?</th>
+            <th>Avez-vous des suggestions pour améliorer l'expérience utilisateur ?</th>
+            <th>Y a-t-il des fonctionnalités que vous aimeriez voir ajoutées ou supprimées ?</th>
+            <th>Avez-vous des commentaires généraux ou des remarques supplémentaires que vous souhaiteriez partager ?</th>
+            <th>Supprimer</th>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          <% @feedbacks.each do |feedback| %>
+            <tr>
+              <td><%= feedback.user.email %></td>
+              <td><%= feedback.question_1 %></td>
+              <td><%= feedback.question_2 %></td>
+              <td><%= feedback.question_3 %></td>
+              <td><%= feedback.question_4 %></td>
+              <td><%= feedback.question_5 %></td>
+              <td><%= feedback.question_6 %></td>
+              <td><%= feedback.question_7 %></td>
+              <td><%= feedback.question_8 %></td>
+              <td><%= feedback.question_9 %></td>
+              <td><%= feedback.question_10 %></td>
+              <td><%= feedback.question_11 %></td>
+              <td><%= feedback.question_12 %></td>
+              <td>
+                <%= link_to 'Supprimer', feedback_path(feedback), method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer ce feedback?' } %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
     <%= link_to 'Télécharger en Excel', feedbacks_path(format: :xlsx), class: 'btn btn-primary' %>
   </section>
 </div>
