--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -93,224 +93,42 @@
   .link-header a:hover{
     opacity: 0.8;
   }
-  @media screen and (min-width:0px) and (max-width:300px) {
-    header {
-      padding: 15px 0;
-      bottom:0;
-      height: 80px;
-      width: 100vw;
-      height: fit-content;
-      z-index: 9999;
-    }
-    .flex-btn-login {
-      display: none;
-    }
 
-    .logo-header {
-      display: none;
-    }
-
-    .nav-header {
-      margin-top: 0;
-    }
-
-    header ul {
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      gap: 8px;
-    }
-
-    /* Déplace le premier élément en premier */
-    .nav-header ul li:nth-child(1) {
-    order: 1; /* Met l'élément "Accueil" en premier */
-    }
-
-    /* Déplace le deuxième élément en deuxième position */
-    .nav-header ul li:nth-child(2) {
-    order: 2; /* Met l'élément "Rechercher" en deuxième position */
-    }
-
-    /* Déplace le cinquième élément en troisième position */
-    .nav-header ul li:nth-child(5) {
-      order: 3; /* Met l'élément "Ajouter" en troisième position */
-    }
-    .nav-header ul li p{
-      display: none;
-    }
-    /* Déplace le troisième élément en quatrième position */
-    .nav-header ul li:nth-child(3) {
-    order: 4; /* Met l'élément "Profil" en quatrième position */
-    }
-
-    /* Déplace le quatrième élément en cinquième position */
-    .nav-header ul li:nth-child(4) {
-    order: 5; /* Met l'élément "Jeux" en cinquième position */
-    }
-    header li a {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap:0;
-    }
-
-    header li a svg {
-      scale: 0.65;
-    }
-
-    .link-header {
-      display: none;
-    }
+   @media screen and (max-width: 800px) {
+  header {
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
   }
-  @media screen and (min-width:300px) and (max-width:449px) {
-    header {
-      padding: 15px 0;
-      bottom:0;
-      width: 100vw;
-      height: fit-content;
-      z-index: 9999;
-    }
-    .flex-btn-login {
-      display: none;
-    }
-
-    .logo-header {
-      display: none;
-    }
-
-    .nav-header {
-      margin-top: 0;
-    }
-
-    header ul {
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      gap: 16px;
-    }
-
-    /* Déplace le premier élément en premier */
-    .nav-header ul li:nth-child(1) {
-    order: 1; /* Met l'élément "Accueil" en premier */
-    }
-
-    /* Déplace le deuxième élément en deuxième position */
-    .nav-header ul li:nth-child(2) {
-    order: 2; /* Met l'élément "Rechercher" en deuxième position */
-    }
-
-    /* Déplace le cinquième élément en troisième position */
-    .nav-header ul li:nth-child(5) {
-      order: 3; /* Met l'élément "Ajouter" en troisième position */
-      scale: 2;
-    }
-    .nav-header ul li:nth-child(5) svg path{
-
-      fill:#202020;
-    }
-    .nav-header ul li:nth-child(5) p{
-      display: none;
-    }
-    /* Déplace le troisième élément en quatrième position */
-    .nav-header ul li:nth-child(3) {
-    order: 4; /* Met l'élément "Profil" en quatrième position */
-    }
-
-    /* Déplace le quatrième élément en cinquième position */
-    .nav-header ul li:nth-child(4) {
-    order: 5; /* Met l'élément "Jeux" en cinquième position */
-    }
-    header li a {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 8px;
-      font-weight: 400;
-      font-size: 10px;
-    }
-
-    header li a svg {
-      scale: 0.75;
-    }
-
-    .link-header {
-      display: none;
-    }
+  .logo-header{
+    display: none;
   }
-  @media screen and (min-width:450px) and (max-width:800px) {
-    header {
-      padding: 15px 0;
-      bottom:0;
-      width: 100vw;
-      height: fit-content;
-      z-index: 9999;
-    }
-    .flex-btn-login {
-      display: none;
-    }
 
-    .logo-header {
-      display: none;
-    }
+  .icon-container {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
 
-    .nav-header {
-      margin-top: 0;
-    }
+  .icon-item {
+    text-align: center;
+    flex: 1;
+  }
 
-    header ul {
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      gap: 42px;
-    }
+  .icon-item i {
+    font-size: 24px; /* Taille de l'icône */
+    display: block;
+  }
 
-   /* Déplace le premier élément en premier */
-    .nav-header ul li:nth-child(1) {
-    order: 1; /* Met l'élément "Accueil" en premier */
-    }
-
-    /* Déplace le deuxième élément en deuxième position */
-    .nav-header ul li:nth-child(2) {
-    order: 2; /* Met l'élément "Rechercher" en deuxième position */
-    }
-
-    /* Déplace le cinquième élément en troisième position */
-    .nav-header ul li:nth-child(5) {
-      order: 3; /* Met l'élément "Ajouter" en troisième position */
-      scale: 2;
-    }
-    .nav-header ul li:nth-child(5) svg path{
-
-      fill:#202020;
-    }
-    .nav-header ul li:nth-child(5) p{
-      display: none;
-    }
-    /* Déplace le troisième élément en quatrième position */
-    .nav-header ul li:nth-child(3) {
-    order: 4; /* Met l'élément "Profil" en quatrième position */
-    }
-
-    /* Déplace le quatrième élément en cinquième position */
-    .nav-header ul li:nth-child(4) {
-    order: 5; /* Met l'élément "Jeux" en cinquième position */
-    }
-    header li a {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 8px;
-      font-weight: 400;
-      font-size: 10px;
-    }
-
-    header li a svg {
-      scale: 0.85;
-    }
-
-    .link-header {
-      display: none;
-    }
+  .icon-item span {
+    font-size: 12px; /* Taille du texte */
+    margin-top: 5px;
+  }
   }
   @media screen and (min-width:801px) and (max-width:1050px){
     header {
