--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -77,7 +77,10 @@
     padding: 0;
     fill:#202020;
   }
-
+  .rgpd{
+    display: flex;
+    width: 80%;
+  }
   @media screen and (min-width:0px) and (max-width:349px) {
     form p {
       width: 60vw;
@@ -172,6 +175,7 @@
     <h1>S’inscrire</h1>
     <div class="form">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
         <div class="field">
           <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email" %>
         </div>
@@ -217,10 +221,15 @@
           <%= f.collection_select :statut, [["Étudiant", "Étudiant"], ["Enseignant", "Enseignant"], ["Autre", "Autre"]], :first, :last, { prompt: "Choisissez un statut" }, { class: "form-control" } %>
         </div>
         <div class="field">
-          <%= f.collection_select :etablissement_id, Etablissement.order(:city), :id, :all_info, { prompt: "Choisissez un établissement" }, { class: "form-control" } %>
+          <%= f.collection_select :etablissement_id, Etablissement.order(:city), :id, :all_info, { include_blank: "Aucun établissement" }, { class: "form-control" } %>
         </div>
         <div class="field">
           <%= f.text_field :referral_code, placeholder: "Code de parrainage" %>
+        </div>
+        <!-- Case à cocher pour le consentement RGPD -->
+        <div class="field rgpd">
+          <%= f.check_box :rgpd_consent, required: true %>
+          <%= f.label :rgpd_consent, "J'accepte que mes données personnelles soient collectées et traitées conformément à la" %>  <%= link_to 'Politique de confidentialité', politiquedeconfidentialite_path, target: "_blank" %>
         </div>
         <div class="actions">
           <%= f.submit "S’inscrire ⏩️", class:"button dark btn-login" %>
