--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -278,8 +278,6 @@ a {
   transition: width 0.1s;
   border-radius: 0px 0px 10px 10px;
 }
-/* Loader */
-
 
 
 .home-flex {
@@ -1090,7 +1088,7 @@ input[type=password] {
 }
 
 select{
-  width: calc(55vw + 30px);
+  width: calc(55vw);
   border: none;
   stroke: none;
   padding-left: 25px;
