--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,59 +1,55 @@
-<style>
-  #loader-main {
-     position: fixed;
-     left: 50%;
-     top: 50%;
-     transform: translate(-50%, -50%);
-     z-index: 9999;
-   }
-
-   .loader-hidden {
-     display: none;
-   }
-</style>
 <!DOCTYPE html>
 <html>
-  <head>
+ <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Balises pour une indexation optimisée -->
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
     <meta name="bingbot" content="index, follow">
-    <!-- META -->
     <title><%= @page_title || "Omniscient Design" %></title>
     <meta name="description" content="<%= @meta_description %>">
     <%= favicon_link_tag 'favicon.svg' %>
     <meta name="theme-color" content="#ffffff">
     <meta name="copyright" content="© Copyright Omniscient Design - Tous droits réservés.">
-    <!-- CSS & JS -->
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', 'data-turbo-track': 'reload', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= javascript_importmap_tags %>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Exemple de script CDN pour Leaflet.markercluster -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.0/dist/MarkerCluster.Default.css" />
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <script src="https://unpkg.com/leaflet.markercluster@1.5.0/dist/leaflet.markercluster.js"></script>
-    <!-- Balises pour les réseaux sociaux -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
+    <script src="https://unpkg.com/leaflet.markercluster@1.5.0/dist/leaflet.markercluster.js" defer></script>
     <meta property="og:locale" content="fr_FR">
     <meta property="og:type" content="website">
     <meta property="og:title" content="<%= @page_title || "Omniscient Design" %>">
     <meta property="og:site_name" content="Omniscient Design">
     <meta property="og:url" content="<%= @current_page_url %>">
     <meta property="og:description" content="<%= @meta_description %>">
-    <!-- Balises pour Twitter -->
     <meta name="twitter:title" content="<%= @page_title || "Omniscient Design" %>">
     <meta name="twitter:description" content="<%= @meta_description %>">
     <meta name="twitter:url" content="<%= @current_page_url %>">
+    <style>
+      #loading {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 9999;
+      }
+
+      #loading img {
+        width: 250px;
+        height: 250px;
+      }
+
+      #content {
+        display: none;
+      }
+    </style>
   </head>
+
   <body class="<%= 'no-scroll' if (controller_name == 'oeuvres' || controller_name == 'designers') && action_name == 'index' %>">
-    <% unless controller_name == 'lists' && action_name == 'edit' || action_name.in?(['presentation', 'show', 'sign_in']) %>
-      <%= render 'layouts/header' %>
-    <% end %>
     <% if notice.present? %>
       <div class="alert" id="alert">
         <p><%= notice %></p>
@@ -73,31 +69,17 @@
         </div>
       <% end %>
     <% end %>
-    <%# <%= image_tag "loader.gif", alt: "", id: "loader-main" %>
+    <div id="loading">
+      <img src="<%= asset_path('loader.gif') %>" alt="Loading...">
+    </div>
+    <% unless controller_name == 'lists' && action_name == 'edit' || action_name.in?(['presentation', 'show', 'sign_in']) %>
+      <%= render 'layouts/header' %>
+    <% end %>
     <main>
-      <%= yield %>
+      <div id="content">
+        <%= yield %>
+      </div>
     </main>
-    <script>
-      document.addEventListener("turbo:load", function() {
-              // Sélection du loader
-              var loader = document.getElementById("loader-main");
-
-              // Montrer le loader pendant que la page se charge
-              if (loader) {
-             loader.classList.remove("loader-hidden");
-
-             // Masquer le loader une fois que la page est complètement chargée
-             window.addEventListener("load", function() {
-                 loader.classList.add("loader-hidden");
-             });
-
-             // S'assurer que le loader se cache même si "window.load" ne s'exécute pas
-             setTimeout(function() {
-                 loader.classList.add("loader-hidden");
-             }, 5000); // Masquer le loader après 5 secondes, même si la page n'est pas complètement chargée
-              }
-          });
-    </script>
   </body>
 </html>
 <script>
@@ -130,4 +112,17 @@
         }
       }
     }
+</script>
+<script>
+  document.addEventListener("turbolinks:load", function() {
+    document.getElementById("loading").style.display = "none"; // Masquer le loader
+    document.getElementById("content").style.display = "block"; // Afficher le contenu
+  });
+
+  // Solution de repli pour les chargements de page sans Turbolinks (ex : chargement initial de la page)
+  window.addEventListener('load', function() {
+    document.getElementById("loading").style.display = "none"; // Masquer le loader
+    document.getElementById("content").style.display = "block"; // Afficher le contenu
+  });
+
 </script>
