--- a/app/views/pages/validation.html.erb
+++ b/app/views/pages/validation.html.erb
@@ -117,7 +117,7 @@
               <td>
                 <%= link_to "Voir", oeuvre_path(oeuvre), class: "btn" %>
                 <%= link_to "Modifier", edit_oeuvre_path(oeuvre), class: "btn btn-orange" %>
-                <%= link_to "Valider", validate_oeuvre_path(oeuvre), method: :patch, class: "btn btn-green" %>
+                <%= link_to "Valider", validate_oeuvre_path(oeuvre), class: "btn btn-green" %>
                 <%= link_to 'Supprimer', oeuvre_path(oeuvre), method: :delete, data: { confirm: 'Êtes-vous sûr?' }, class: 'btn btn-danger' %>
               </td>
             </tr>
