--- a/app/views/designers/_card.html.erb
+++ b/app/views/designers/_card.html.erb
@@ -1,11 +1,11 @@
 <%= link_to designer_path(card) do %>
   <div class="card" data-card-id="<%= card.id %>">
     <div class="bg-card">
-      <% image_path = "/designers/#{remove_accents_and_special_chars(card.nom_designer)}.webp" %>
-      <% if file_exists?(image_path) %>
-        <div class="img-card" style="background-image: url('/assets/<%= image_path %>'); background-repeat: no-repeat; background-position: center center; background-size: cover;">
-        </div>
+      <% image_path = "designers/#{remove_accents_and_special_chars(card.nom_designer)}.webp" %>
+      <% if asset_exists?(image_path) %>
+        <div class="img-card" style="background-image: url('<%= asset_path(image_path) %>'); background-repeat: no-repeat; background-position: center center; background-size: cover;"></div>
       <% else %>
+        <div class="img-card" style="background-image: url('<%= card.image%>'); background-repeat: no-repeat; background-position: center center; background-size: cover;"></div>
       <% end %>
     </div>
     <div class="text-card">
