--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
   <!-- JavaScript -->
   <%= javascript_include_tag 'https://code.jquery.com/jquery-3.6.0.min.js' %>
   <%= javascript_importmap_tags %> <!-- Pour Importmaps -->
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
   <script src="https://unpkg.com/leaflet.markercluster@1.5.0/dist/leaflet.markercluster.js" defer></script>
 
