--- a/app/views/oeuvres/index.html.erb
+++ b/app/views/oeuvres/index.html.erb
@@ -58,15 +58,15 @@
   </div>
   <div class="button-nav">
     <button class="arrow-button up">
-      <svg width="36" height="40" viewBox="0 0 36 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M18.0002 38L18.0002 2.54487L18.0002 38ZM3 15.8405L18.0002 2.54487L33.0005 15.8405" fill="#202020"/>
-        <path d="M18.0002 38L18.0002 2.54487M18.0002 2.54487L3 15.8405M18.0002 2.54487L33.0005 15.8405" stroke="white" stroke-width="3.65112" stroke-linecap="square"/>
+      <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M18 38L18 40L22 40L22 38L18 38ZM22 6C22 4.89543 21.1046 4 20 4C18.8954 4 18 4.89543 18 6L22 6ZM22 38L22 6L18 6L18 38L22 38Z" fill="white"/>
+        <path d="M5 15.8408L20.0002 2.54515L35.0005 15.8408" stroke="white" stroke-width="3.65112" stroke-linecap="square"/>
       </svg>
     </button>
     <button class="arrow-button down">
-      <svg width="36" height="40" viewBox="0 0 36 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" clip-rule="evenodd" d="M17.9998 2L17.9998 37.4551L17.9998 2ZM33 24.1595L17.9998 37.4551L2.99951 24.1595" fill="#202020"/>
-        <path d="M17.9998 2L17.9998 37.4551M17.9998 37.4551L33 24.1595M17.9998 37.4551L2.99951 24.1595" stroke="white" stroke-width="3.65112" stroke-linecap="square"/>
+      <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M18 2L18 1.86484e-08L22 -1.86484e-08L22 2L18 2ZM22 34C22 35.1046 21.1046 36 20 36C18.8954 36 18 35.1046 18 34L22 34ZM22 2L22 34L18 34L18 2L22 2Z" fill="white"/>
+        <path d="M5 24.1592L20.0002 37.4549L35.0005 24.1592" stroke="white" stroke-width="3.65112" stroke-linecap="square"/>
       </svg>
     </button>
   </div>
