--- a/app/views/oeuvres/search.html.erb
+++ b/app/views/oeuvres/search.html.erb
@@ -359,157 +359,157 @@
 </style>
 <div class="main-div">
   <div class="header-search">
-    <form autocomplete="off" action="/search_results">
-      <div class="autocomplete" style="width: 300px;">
-        <input id="workSearch" class="search-top-bar" type="search" placeholder="Rechercher une œuvre" style="background-image: url('data:image/svg+xml...'); background-repeat: no-repeat; background-position-x: 20px; background-position-y: center;">
+    <form autocomplete="off" method="get" action="/oeuvres">
+      <div class="autocomplete">
+        <input id="workSearch" name="query" class="search-top-bar" type="search" placeholder="Rechercher une œuvre" style="background-image: url('data:image/svg+xml...'); background-repeat: no-repeat; background-position-x: 20px; background-position-y: center;">
+        <button type="submit">Rechercher</button>
       </div>
-      <input type="submit">
     </form>
-  <%= link_to notifications_path, class: "nav-link-profil" do %>
-    <div class="circle-notif">
-      <svg width="25" height="29" viewBox="0 0 25 29" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M24.8571 23.4762V24.8571H0V23.4762L2.7619 20.7143V12.4286C2.7619 8.14762 5.56524 4.37762 9.66667 3.16238V2.7619C9.66667 2.0294 9.95765 1.3269 10.4756 0.808943C10.9936 0.290985 11.6961 0 12.4286 0C13.1611 0 13.8636 0.290985 14.3815 0.808943C14.8995 1.3269 15.1905 2.0294 15.1905 2.7619V3.16238C19.2919 4.37762 22.0952 8.14762 22.0952 12.4286V20.7143L24.8571 23.4762ZM15.1905 26.2381C15.1905 26.9706 14.8995 27.6731 14.3815 28.1911C13.8636 28.709 13.1611 29 12.4286 29C11.6961 29 10.9936 28.709 10.4756 28.1911C9.95765 27.6731 9.66667 26.9706 9.66667 26.2381" fill="white"/>
-      </svg>
-      <% if current_user %>
-        <% if @unread_notifications_count > 0 %>
-          <div class="notification-counter">
-            <div class="notification-badge"><%= @unread_notifications_count %></div>
+    <%= link_to notifications_path, class: "nav-link-profil" do %>
+      <div class="circle-notif">
+        <svg width="25" height="29" viewBox="0 0 25 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M24.8571 23.4762V24.8571H0V23.4762L2.7619 20.7143V12.4286C2.7619 8.14762 5.56524 4.37762 9.66667 3.16238V2.7619C9.66667 2.0294 9.95765 1.3269 10.4756 0.808943C10.9936 0.290985 11.6961 0 12.4286 0C13.1611 0 13.8636 0.290985 14.3815 0.808943C14.8995 1.3269 15.1905 2.0294 15.1905 2.7619V3.16238C19.2919 4.37762 22.0952 8.14762 22.0952 12.4286V20.7143L24.8571 23.4762ZM15.1905 26.2381C15.1905 26.9706 14.8995 27.6731 14.3815 28.1911C13.8636 28.709 13.1611 29 12.4286 29C11.6961 29 10.9936 28.709 10.4756 28.1911C9.95765 27.6731 9.66667 26.9706 9.66667 26.2381" fill="white"/>
+        </svg>
+        <% if current_user %>
+          <% if @unread_notifications_count > 0 %>
+            <div class="notification-counter">
+              <div class="notification-badge"><%= @unread_notifications_count %></div>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+  <div class="main-search">
+    <h1>Rechercher</h1>
+    <h2 class="title">Catégories</h2>
+    <div class="flex-category">
+      <% Domaine.all.each do |domaine| %>
+        <%= link_to search_category_path(domaine: domaine.id) do %>
+          <div class="card-category" style="background-color: <%= domaine.couleur %>80;">
+            <%= image_tag "domaines/#{domaine.svg}", alt: domaine.domaine %>
+            <p class="text-category" style="color:<%= domaine.couleur %>;"><%= domaine.domaine %></p>
           </div>
         <% end %>
       <% end %>
     </div>
-  <% end %>
-</div>
-<div class="main-search">
-  <h1>Rechercher</h1>
-  <h2 class="title">Catégories</h2>
-  <div class="flex-category">
-    <% Domaine.all.each do |domaine| %>
-      <%= link_to search_category_path(domaine: domaine.id) do %>
-        <div class="card-category" style="background-color: <%= domaine.couleur %>80;">
-          <%= image_tag "domaines/#{domaine.svg}", alt: domaine.domaine %>
-          <p class="text-category" style="color:<%= domaine.couleur %>;"><%= domaine.domaine %></p>
-        </div>
-      <% end %>
-    <% end %>
-  </div>
-  <h2 class="title">Frise Chronologique</h2>
-  <a href="/search_frise">
-    <div class="timeline">
-      <% @timeline_years.each do |year| %>
-        <div class="timeline-item">
-          <div class="oeuvres">
-            <div class="oeuvres-container">
-              <% oeuvres_year = @oeuvres_filtered.select { |oeuvre| oeuvre.date_oeuvre.to_i == year } %>
-              <% oeuvres_year.each do |oeuvre| %>
-                <div class="oeuvre" title="<%= oeuvre.nom_oeuvre %>" data-year="<%= oeuvre.date_oeuvre %>" style="background-image: url('<%= oeuvre.image %>');"></div>
-              <% end %>
-              <% designers_year = @designers_filtered.select { |designer| designer.date_naissance.to_i == year } %>
-              <% designers_year.each do |designer| %>
-                <div class="oeuvre" title="<%= designer.nom_designer %>" data-year="<%= designer.date_naissance %>" style="background-image: url('<%= designer.image %>');"></div>
-              <% end %>
+    <h2 class="title">Frise Chronologique</h2>
+    <a href="/search_frise">
+      <div class="timeline">
+        <% @timeline_years.each do |year| %>
+          <div class="timeline-item">
+            <div class="oeuvres">
+              <div class="oeuvres-container">
+                <% oeuvres_year = @oeuvres_filtered.select { |oeuvre| oeuvre.date_oeuvre.to_i == year } %>
+                <% oeuvres_year.each do |oeuvre| %>
+                  <div class="oeuvre" title="<%= oeuvre.nom_oeuvre %>" data-year="<%= oeuvre.date_oeuvre %>" style="background-image: url('<%= oeuvre.image %>');"></div>
+                <% end %>
+                <% designers_year = @designers_filtered.select { |designer| designer.date_naissance.to_i == year } %>
+                <% designers_year.each do |designer| %>
+                  <div class="oeuvre" title="<%= designer.nom_designer %>" data-year="<%= designer.date_naissance %>" style="background-image: url('<%= designer.image %>');"></div>
+                <% end %>
+              </div>
+              <div class="oeuvre empty"></div>
+              <div class="year"><%= year %></div>
             </div>
-            <div class="oeuvre empty"></div>
-            <div class="year"><%= year %></div>
           </div>
-        </div>
+        <% end %>
+        <hr class="timeline-hr">
+      </div>
+      <button class="button dark">Voir les frises chronologiques</button>
+    </a>
+    <h2 class="title">Designers</h2>
+    <div class="flex-designer" id="designer-cards">
+      <% @designers = Designer.where(validation: true).order(:nom_designer) %>
+      <% @designers.each do |designer| %>
+        <%= link_to designer do %>
+          <div class="card-designer" style="background: url('<%= designer.image %>'); background-size: cover; background-position:center;">
+            <div class="inner-card-designer">
+              <p class="country-card-designer"><%= designer.country.country %></p>
+              <p class="title-card-designer"><%= designer.nom_designer %></p>
+            </div>
+          </div>
+        <%end%>
       <% end %>
-      <hr class="timeline-hr">
     </div>
-    <button class="button dark">Voir les frises chronologiques</button>
-  </a>
-  <h2 class="title">Designers</h2>
-  <div class="flex-designer" id="designer-cards">
-    <% @designers = Designer.where(validation: true).order(:nom_designer) %>
-    <% @designers.each do |designer| %>
-      <%= link_to designer do %>
-        <div class="card-designer" style="background: url('<%= designer.image %>'); background-size: cover; background-position:center;">
-          <div class="inner-card-designer">
-            <p class="country-card-designer"><%= designer.country.country %></p>
-            <p class="title-card-designer"><%= designer.nom_designer %></p>
+    <div id="load-more-button-designers">
+      <button class="load-more-btn button dark" >Charger plus de designers</button>
+    </div>
+    <h2 class="title">Oeuvres</h2>
+    <div class="flex-oeuvre" id="oeuvre-cards">
+      <% @oeuvres = Oeuvre.where(validation: true).order(:nom_oeuvre) %>
+      <% @oeuvres.each do |oeuvre| %>
+        <%= link_to oeuvre do %>
+          <div class="card-oeuvre" style="background: url('<%= oeuvre.image %>'); background-size: cover; background-position:center;">
+            <div class="inner-card-oeuvre">
+              <p class="domaine-card-oeuvre"><%= oeuvre.domaine.domaine %></p>
+              <p class="title-card-oeuvre"><%= oeuvre.nom_oeuvre %></p>
+            </div>
           </div>
-        </div>
-      <%end%>
-    <% end %>
-  </div>
-  <div id="load-more-button-designers">
-    <button class="load-more-btn button dark" >Charger plus de designers</button>
-  </div>
-  <h2 class="title">Oeuvres</h2>
-  <div class="flex-oeuvre" id="oeuvre-cards">
-    <% @oeuvres = Oeuvre.where(validation: true).order(:nom_oeuvre) %>
-    <% @oeuvres.each do |oeuvre| %>
-      <%= link_to oeuvre do %>
-        <div class="card-oeuvre" style="background: url('<%= oeuvre.image %>'); background-size: cover; background-position:center;">
-          <div class="inner-card-oeuvre">
-            <p class="domaine-card-oeuvre"><%= oeuvre.domaine.domaine %></p>
-            <p class="title-card-oeuvre"><%= oeuvre.nom_oeuvre %></p>
-          </div>
-        </div>
-      <%end%>
-    <% end %>
-  </div>
-  <div id="load-more-button-oeuvres">
-    <button class="load-more-btn button dark">Charger plus d'oeuvres</button>
-  </div>
-  <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      const designerCards = document.querySelectorAll('.card-designer');
-      const oeuvreCards = document.querySelectorAll('.card-oeuvre');
-      const loadMoreButtonDesigners = document.getElementById('load-more-button-designers');
-      const loadMoreButtonOeuvres = document.getElementById('load-more-button-oeuvres');
-      const initialCardsToShow = 8;
-      let cardsToShowDesigners = initialCardsToShow;
-      let cardsToShowOeuvres = initialCardsToShow;
+        <%end%>
+      <% end %>
+    </div>
+    <div id="load-more-button-oeuvres">
+      <button class="load-more-btn button dark">Charger plus d'oeuvres</button>
+    </div>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        const designerCards = document.querySelectorAll('.card-designer');
+        const oeuvreCards = document.querySelectorAll('.card-oeuvre');
+        const loadMoreButtonDesigners = document.getElementById('load-more-button-designers');
+        const loadMoreButtonOeuvres = document.getElementById('load-more-button-oeuvres');
+        const initialCardsToShow = 8;
+        let cardsToShowDesigners = initialCardsToShow;
+        let cardsToShowOeuvres = initialCardsToShow;
 
-      // Fonction pour afficher les cartes des designers
-      function showMoreDesigners() {
-        for (let i = cardsToShowDesigners; i < cardsToShowDesigners + initialCardsToShow; i++) {
-          if (i >= designerCards.length) {
-            loadMoreButtonDesigners.disabled = true;
-            loadMoreButtonDesigners.textContent = "Toutes les cartes chargées";
-            break;
+        // Fonction pour afficher les cartes des designers
+        function showMoreDesigners() {
+          for (let i = cardsToShowDesigners; i < cardsToShowDesigners + initialCardsToShow; i++) {
+            if (i >= designerCards.length) {
+              loadMoreButtonDesigners.disabled = true;
+              loadMoreButtonDesigners.textContent = "";
+              break;
+            }
+            designerCards[i].style.display = 'flex';
           }
-          designerCards[i].style.display = 'flex';
+          cardsToShowDesigners += initialCardsToShow;
         }
-        cardsToShowDesigners += initialCardsToShow;
-      }
 
-      // Fonction pour afficher les cartes des oeuvres
-      function showMoreOeuvres() {
-        for (let i = cardsToShowOeuvres; i < cardsToShowOeuvres + initialCardsToShow; i++) {
-          if (i >= oeuvreCards.length) {
-            loadMoreButtonOeuvres.disabled = true;
-            loadMoreButtonOeuvres.textContent = "Toutes les cartes chargées";
-            break;
+        // Fonction pour afficher les cartes des oeuvres
+        function showMoreOeuvres() {
+          for (let i = cardsToShowOeuvres; i < cardsToShowOeuvres + initialCardsToShow; i++) {
+            if (i >= oeuvreCards.length) {
+              loadMoreButtonOeuvres.disabled = true;
+              loadMoreButtonOeuvres.textContent = "";
+              break;
+            }
+            oeuvreCards[i].style.display = 'flex';
           }
-          oeuvreCards[i].style.display = 'flex';
+          cardsToShowOeuvres += initialCardsToShow;
         }
-        cardsToShowOeuvres += initialCardsToShow;
-      }
 
-      // Cacher toutes les cartes des designers au-delà de celles à afficher initialement
-      for (let i = initialCardsToShow; i < designerCards.length; i++) {
-        designerCards[i].style.display = 'none';
-      }
+        // Cacher toutes les cartes des designers au-delà de celles à afficher initialement
+        for (let i = initialCardsToShow; i < designerCards.length; i++) {
+          designerCards[i].style.display = 'none';
+        }
 
-      // Cacher toutes les cartes des oeuvres au-delà de celles à afficher initialement
-      for (let i = initialCardsToShow; i < oeuvreCards.length; i++) {
-        oeuvreCards[i].style.display = 'none';
-      }
+        // Cacher toutes les cartes des oeuvres au-delà de celles à afficher initialement
+        for (let i = initialCardsToShow; i < oeuvreCards.length; i++) {
+          oeuvreCards[i].style.display = 'none';
+        }
 
-      // Gérer le clic sur le bouton "Charger plus" pour les designers
-      loadMoreButtonDesigners.addEventListener('click', function() {
-        showMoreDesigners();
+        // Gérer le clic sur le bouton "Charger plus" pour les designers
+        loadMoreButtonDesigners.addEventListener('click', function() {
+          showMoreDesigners();
+        });
+
+        // Gérer le clic sur le bouton "Charger plus" pour les oeuvres
+        loadMoreButtonOeuvres.addEventListener('click', function() {
+          showMoreOeuvres();
+        });
       });
-
-      // Gérer le clic sur le bouton "Charger plus" pour les oeuvres
-      loadMoreButtonOeuvres.addEventListener('click', function() {
-        showMoreOeuvres();
-      });
-    });
-  </script>
-</div>
+    </script>
+  </div>
 </div>
 <script>
   function autocomplete(inp, arr) {
