--- a/app/views/users/confirmations/new.html.erb
+++ b/app/views/users/confirmations/new.html.erb
@@ -10,6 +10,7 @@
     background-image: url('/assets/bg-presentation.png');
     background-repeat: no-repeat;
     height: 100vh;
+    background-size: cover;
   }
 
   .box-log {
