--- a/app/views/users/passwords/edit.html.erb
+++ b/app/views/users/passwords/edit.html.erb
@@ -9,6 +9,7 @@
     position: relative;
     background-image: url('/assets/bg-presentation.png');
     background-repeat: no-repeat;
+    background-size: cover;
     height: 100vh;
   }
 
