--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -9,6 +9,7 @@
     position: relative;
     background-image: url('/assets/bg-presentation2.png');
     background-repeat: no-repeat;
+    background-size: cover;
     height: 1450px;
   }
 
