--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -104,6 +104,7 @@
 
   <section class="grid-1">
     <h2>Membres inscrits sur le site</h2>
+    <p>Il y a actuellement <%= @users.count %> membres sur le site</p>
     <div class="table-wrapper">
       <table>
         <thead>
